--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/solidstate-solidity"]
+	path = lib/solidstate-solidity
+	url = https://github.com/solidstate-network/solidstate-solidity
+[submodule "lib/BoringSolidity"]
+	path = lib/BoringSolidity
+	url = https://github.com/BoringCrypto/BoringSolidity
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/transmissions11/solmate
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
