--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
-    "solidity.packageDefaultDependenciesContractsDirectory": "src",
-    "solidity.packageDefaultDependenciesDirectory": "lib",
-    "editor.formatOnSave": true,
-    "[solidity]": {
-        "editor.defaultFormatter": "JuanBlanco.solidity" 
-      },
-    "solidity.formatter": "forge",
-    "search.exclude": {
-      "lib": true
-    },
-    "solidity.compileUsingRemoteVersion" : "latest"
+  "solidity.packageDefaultDependenciesContractsDirectory": "src",
+  "solidity.packageDefaultDependenciesDirectory": "lib",
+  "editor.formatOnSave": true,
+  "[solidity]": {
+    "editor.defaultFormatter": "JuanBlanco.solidity"
+  },
+  "solidity.formatter": "prettier",
+  "search.exclude": {
+    "lib": true
+  },
+  "solidity.compileUsingRemoteVersion": "latest"
 }
