--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
-{
+{  
   "solidity.packageDefaultDependenciesContractsDirectory": "src",
   "solidity.packageDefaultDependenciesDirectory": "lib",
   "editor.formatOnSave": true,
@@ -6,6 +6,24 @@
     "editor.defaultFormatter": "JuanBlanco.solidity"
   },
   "solidity.formatter": "forge",
+  "search.exclude": {
+    "lib": true
+  },
+  "solidity.remappings": [
+    "BoringSolidity/=lib/BoringSolidity/contracts/",
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "erc4626-tests/=lib/openzeppelin-contracts/lib/erc4626-tests/",
+    "forge-std/=lib/forge-std/src/",
+    "openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/",
+    "solidstate-solidity/=lib/solidstate-solidity/contracts/",
+    "solmate/=lib/solmate/src/",
+    "lib/forge-std:ds-test/=lib/forge-std/lib/ds-test/src/",
+    "lib/openzeppelin-contracts:ds-test/=lib/openzeppelin-contracts/lib/forge-std/lib/ds-test/src/",
+    "lib/openzeppelin-contracts:erc4626-tests/=lib/openzeppelin-contracts/lib/erc4626-tests/",
+    "lib/openzeppelin-contracts:forge-std/=lib/openzeppelin-contracts/lib/forge-std/src/",
+    "lib/openzeppelin-contracts:openzeppelin/=lib/openzeppelin-contracts/contracts/",
+    "lib/solmate:ds-test/=lib/solmate/lib/ds-test/src/"
+  ],
   "solidity.compileUsingRemoteVersion": "latest",
   "git.ignoreSubmodules": true,
   "git.detectSubmodules": false
